# Ficus

./: .gitignore  CMakeLists.txt  LICENSE  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  README.md
Ficus C++/Ficus/: PluginEditor.cpp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
